part2/scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployement
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-pod
  template:
    metadata:
      labels:
        app: flask-pod
    spec:
      containers:
      - image: digitalocean/flask-helloworld
        name: flask-container

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-js-pod
  template:
    metadata:
      labels:
        app: node-js-pod
    spec:
      containers:
      - image: heroku/nodejs-hello-world
        name: node-js-container
