part2/scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  type: NodePort
  selector:
    app: flask-pod
  ports:
  - port: 5000
    nodePort: 30002

---

apiVersion: v1
kind: Service
metadata:
  name: node-js-svc
spec:
  type: NodePort
  selector:
    app: node-js-pod
  ports:
  - port: 3000
    nodePort: 30001
