part2/scripts/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: whoami
spec:
  selector:
    app: flask-pod
  ports:
  - port: 5000


---

apiVersion: v1
kind: Service
metadata:
  name: node-js-svc
  namespace: whoami
spec:
  selector:
    app: node-js-pod
  ports:
  - port: 3000

---
  
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: whoami
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: traefiklabs
