part2/scripts/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app1.com`)
      kind: Rule
      services:
        - name: app-one
          port: 5000
    - match: Host(`app2.com`)
      kind: Rule
      services:
        - name: app-two
          port: 80
    - match: Host(`app3.com`)
      kind: Rule
      services:
        - name: app-three
          port: 3000
