part2/scripts/ingress2.yaml

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-whoami
#   namespace: whoami
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web

# spec:
#   rules:
#     # - host: app2.com
#     # - http:
#     #     paths:
#     #       - path: /
#     #         pathType: Prefix
#     #         backend:
#     #           service:
#     #             name: whoami-svc
#     #             port:
#     #               number: 80

#     - host: app1.com
#     - http:
#         paths:
#           - path: /
#             backend:
#               service:
#                 name: node-js-svc
#                 port:
#                   number: 3000

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k3sapps
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app1.com`)
      kind: Rule
      services:
        - name: app-one
          port: 5000
    - match: Host(`app2.com`)
      kind: Rule
      services:
        - name: app-two
          port: 80
    - match: Host(`app3.com`)
      kind: Rule
      services:
        - name: app-three
          port: 3000
